--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "express": "^4.18.2",
-    "pug": "^3.0.2"
+    "postcss": "^8.4.18",
+    "postcss-cli": "^10.0.0",
+    "pug": "^3.0.2",
+    "tailwindcss": "^3.2.1",
+    "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css"
   }
 }
