--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "leboncoin",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./index.js"
+    "dev": "nodemon ./index.ts",
+    "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,6 @@
     "postcss": "^8.4.18",
     "postcss-cli": "^10.0.0",
     "pug": "^3.0.2",
-    "tailwindcss": "^3.2.1",
-    "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css"
+    "tailwindcss": "^3.2.1"
   }
 }
