--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^2.3.0",
     "pug": "^3.0.2"
   }
 }
