--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./index.ts"
+    "dev": "nodemon ./index.ts",
+    "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +19,14 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
-    "pug": "^3.0.2"
+    "postcss": "^8.4.18",
+    "postcss-cli": "^10.0.0",
+    "pug": "^3.0.2",
+    "tailwindcss": "^3.2.1"
   }
 }
