--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./index.ts",
     "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css",
-    "tailwind:watch": "postcss public/styles/tailwind.css -w -o public/styles/style.css"
+    "tailwind:watch": "postcss public/styles/tailwind.css -w -o public/styles/style.css",
+    "start": "ts-node dist/index.js",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
