--- a/.env
+++ b/.env
@@ -1,23 +1,7 @@
-#database host value
-DB_HOST = 'localhost'
-
-#database port value
-DB_PORT = 3306
-
-#database user value
-DB_USER = 'root'
-
-#database password value
-DB_PASSWORD = 'root'
-
-#database name value
-DB_NAME = 'db'
-
-#database socket path value
-SOCKET_PATH = '/Applications/MAMP/tmp/mysql/mysql.sock'
-
-#server port value
-SERVER_PORT = "3000"
-
-#jwt secret value
+SERVER_PORT = "9000"
+DB_HOST = "localhost"
+DB_PORT = "3333"
+DB_USERNAME = "root"
+DB_PASSWORD = "root"
+DB_NAME = "database"
 JWT_SECRET = "secret"
